--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -176,12 +176,17 @@
   <!-- Tab4: Form -->
   <mat-tab label="Form">
     <div class="tab-body">
-      <p>Event Form Info</p>
       <div [ngTemplateOutlet]="eventPlan.registrationForm ? showFormInfo : noFormMessage"></div>
       <ng-template #noFormMessage>
-          <p>No form yet, <button mat-button class="btn-link" color="primary" (click)="configForm(eventPlan)">click</button> here config form</p>
+        <p>No form yet, <button mat-button class="btn-link" color="primary"
+            (click)="configForm(eventPlan)">click</button> here config form</p>
       </ng-template>
       <ng-template #showFormInfo>
+        <div class="mat-title">Preview Form
+          <button mat-icon-button class="process-btn-group" color="primary" (click)="addEventProcessToEvent()">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </div>
         <pre>{{ eventPlan.registrationForm | json }}</pre>
       </ng-template>
     </div>
