--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -220,11 +220,16 @@
       </ng-template>
     </div>
   </mat-tab>
-  <mat-tab label="Attendee">
+  <mat-tab label="Attendees">
     <div class="tab-body">
+      <div class="mat-subheading-1">Attendees
+        <button mat-icon-button class="process-btn-group" color="primary" (click)="addAttendee()">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
       <div [ngTemplateOutlet]="eventPlan.attendees && eventPlan.attendees.length > 0 ? attendeeList : noFoundAttendees"></div>
       <ng-template #attendeeList>
-          <app-standard-list title="Attendee" [columns]="attendeeColumns" [filterList]="attendeeFilterList" [actions]="attendeeActions" [customList]="eventPlan.attendees"></app-standard-list>
+          <app-standard-list title="Attendee" [columns]="attendeeColumns" [filterList]="attendeeFilterList" [actions]="attendeeActions" [(customList)]="eventPlan.attendees"></app-standard-list>
       </ng-template>
       <ng-template #noFoundAttendees>
         <p>No attendee yet.</p>
