added unscrubed for all subscribtions + group attendees

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -78,6 +78,10 @@ button.active {
   padding: 10px 0;
 }
 
-.btn-right {
+.action-group {
+  display: flex;
+}
+
+.action-group .btn-end {
   margin-left: auto;
 }
