--- a/ng-app/src/app/customer/invoice-form/invoice-form.component.html
+++ b/ng-app/src/app/customer/invoice-form/invoice-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Invoice" domainName="invoice" [fields]="fields"></app-standard-form>
+<app-standard-form title="Invoice" domainName="invoice" [fields]="fields" [includes]="includes"></app-standard-form>
