--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -348,7 +348,7 @@
           <button class="btn-sm" [routerLink]="['/invoice/edit/' + eventPlan._id]" mat-raised-button
             color="primary">Edit</button>
         </div>
-        <pre>{{ invoice | json }}</pre>
+        <!-- <pre>{{ invoice | json }}</pre> -->
       </ng-template>
     </div>
   </mat-tab>
