--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -345,7 +345,7 @@
           </tbody>
         </table>
         <div class="action-group">
-          <button class="btn-sm" [routerLink]="['/invoice/edit/' + eventPlan._id]" mat-raised-button
+          <button class="btn-sm" routerLink="/invoice/edit/{{invoice._id}}" mat-raised-button
             color="primary">Edit</button>
         </div>
         <!-- <pre>{{ invoice | json }}</pre> -->
