--- a/ng-app/src/app/provider/provider-facility-list/provider-facility-list.component.html
+++ b/ng-app/src/app/provider/provider-facility-list/provider-facility-list.component.html
@@ -1,2 +1,2 @@
-<app-standard-list title="Provider Facility" domainName="provider-facility" [columns]="columns" [filterList]="filterList"></app-standard-list>
-
+<app-standard-list title="Provider Facility" domainName="provider-facility" [columns]="columns"
+  [filterList]="filterList" [includes]="includes"></app-standard-list>
