--- a/ng-app/src/app/provider/provider-facility-form/provider-facility-form.component.html
+++ b/ng-app/src/app/provider/provider-facility-form/provider-facility-form.component.html
@@ -1,2 +1,2 @@
-<app-standard-form title="Provider Facility" domainName="provider-facility" [fields]="fields"></app-standard-form>
-
+<app-standard-form title="Provider Facility" domainName="provider-facility" [fields]="fields" [includes]="includes">
+</app-standard-form>
