--- a/ng-app/src/app/provider/provider-service-list/provider-service-list.component.html
+++ b/ng-app/src/app/provider/provider-service-list/provider-service-list.component.html
@@ -1,1 +1,2 @@
-<app-standard-list title="Provider Service" domainName="provider-service" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Provider Service" domainName="provider-service" [columns]="columns" [filterList]="filterList"
+  [includes]="includes"></app-standard-list>
