--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -321,12 +321,14 @@
           <div class="mat-body">{{ invoice.status }}</div>
         </div>
         <div class="action-group">
-          <button class="btn-sm" (click)="changeInvoiceStatus('Open')" mat-raised-button color="primary">Open</button>
-          <button class="btn-sm" (click)="changeInvoiceStatus('Confirmed')" mat-raised-button
-            color="primary">Confirmed</button>
-          <button class="btn-sm" (click)="changeInvoiceStatus('Paid')" mat-raised-button color="primary">Paid</button>
-          <button class="btn-sm" (click)="changeInvoiceStatus('Closed')" mat-raised-button
-            color="primary">Closed</button>
+          <button class="btn-sm" (click)="changeInvoiceStatus('Open')" mat-raised-button color="primary"
+            *ngIf="invoice.status !== 'Open'">Open</button>
+          <button class="btn-sm" (click)="changeInvoiceStatus('Confirmed')" mat-raised-button color="primary"
+            *ngIf="invoice.status !== 'Confirmed'">Confirmed</button>
+          <button class="btn-sm" (click)="changeInvoiceStatus('Paid')" mat-raised-button color="primary"
+            *ngIf="invoice.status !== 'Paid'">Paid</button>
+          <button class="btn-sm" (click)="changeInvoiceStatus('Closed')" mat-raised-button color="primary"
+            *ngIf="invoice.status !== 'Paid'">Closed</button>
         </div>
         <div class="view-field">
           <label class="mat-body-strong">Remarks</label>
