--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -328,7 +328,7 @@
           <button class="btn-sm" (click)="changeInvoiceStatus('Paid')" mat-raised-button color="primary"
             *ngIf="invoice.status !== 'Paid'">Paid</button>
           <button class="btn-sm" (click)="changeInvoiceStatus('Closed')" mat-raised-button color="primary"
-            *ngIf="invoice.status !== 'Paid'">Closed</button>
+            *ngIf="invoice.status !== 'Closed'">Closed</button>
         </div>
         <div class="view-field">
           <label class="mat-body-strong">Remarks</label>
